--- a/styles.css
+++ b/styles.css
@@ -27,14 +27,16 @@
     color: #ffffff;
     padding: 20px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
+    gap: 20px;
   }
 
   .logo-name {
     display: flex;
     align-items: center;
     gap: 15px;
+    justify-content: center;
   }
   
   .logo {
@@ -53,8 +55,9 @@
     justify-content: center;
     align-items: center;
     background-color: #161f29;
-    padding: 10px;
+    padding: 10px 20px;
     gap: 20px;
+    border-radius: 5px;
   }
   
   nav a {
