--- a/styles.css
+++ b/styles.css
@@ -27,16 +27,15 @@ header {
   color: #ffffff;
   padding: 20px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  width: 100%;
 }
 
 .logo-name {
   display: flex;
   align-items: center;
   gap: 15px;
-  justify-content: center;
 }
 
 .logo {
@@ -52,12 +51,8 @@ header h1 {
 /* Navigation styles */
 nav {
   display: flex;
-  justify-content: center;
   align-items: center;
-  background-color: #161f29;
-  padding: 10px 20px;
   gap: 20px;
-  border-radius: 5px;
 }
 
 nav a {
@@ -69,8 +64,27 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #364453;        /* Darker blue when hovering */
-  border-radius: 5px;                /* Rounded corners for a smooth look */
+  background-color: #364453;
+  border-radius: 5px;
+}
+
+/* Hero section styles */
+.hero {
+  background-color: #ffffff;
+  color: #333;
+  padding: 60px 20px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.hero h1 {
+  font-size: 3em;
+  margin-bottom: 10px;
+}
+
+.hero p {
+  font-size: 1.5em;
+  color: #666;
 }
 
 /* Main content area */
