--- a/styles.css
+++ b/styles.css
@@ -64,9 +64,9 @@ header {
 }
 
 .header-line {
-  width: 600px;
+  width: 900px;
   height: 8px;
-  background-color: #000000;
+  background-color: #fafafa;
   margin: 20px auto;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
