--- a/styles.css
+++ b/styles.css
@@ -404,6 +404,7 @@ h3 {
 
 .centered-content img {
   max-width: 100%;
+  width: 100%;
   height: auto;
   margin: 24px 0;
   display: block;
@@ -424,6 +425,14 @@ h3 {
   color: #ffffff;
   margin-bottom: 20px;
   text-align: center;
+}
+
+.centered-content h3 {
+  margin-bottom: 20px;
+}
+
+.centered-content p {
+  margin-bottom: 20px;
 }
 
 @media (max-width: 900px) {
