--- a/styles.css
+++ b/styles.css
@@ -430,10 +430,12 @@ h3 {
 
 .centered-content h3 {
   margin-bottom: 32px;
+  font-size: 1.3em;
 }
 
 .centered-content p {
   margin-bottom: 20px;
+  font-size: 1.3em;
 }
 
 @media (max-width: 900px) {
