--- a/styles.css
+++ b/styles.css
@@ -428,14 +428,19 @@ h3 {
   text-decoration: underline;
 }
 
+.centered-content h2 {
+  margin-bottom: 20px;
+  font-size: 1.3em;
+}
+
 .centered-content h3 {
   margin-bottom: 32px;
-  font-size: 3em;
+  font-size: 1.3em;
 }
 
 .centered-content p {
   margin-bottom: 20px;
-  font-size: 2em;
+  font-size: 1.3em;
 }
 
 @media (max-width: 900px) {
